--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typewriter-effect": "^2.19.0"
+    "typewriter-effect": "^2.19.0",
+    "webpack": "^5.75.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
